Designs main section

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 		<div class="main-section">
 			<div class="header">IdeaBox</div>
 			<div class="input-section">
-				<div class="input-form">
-				Title
-				<input type="text" name="title">
-				Body
-				<input type="text" name="body">
-				Submit
-				<input type="button" name="submit">
-				</div>
+				<form class="input-form">
+				<p>Title</p>
+				<input type="text" name="title" class="title-input">
+				<p>Body</p>
+				<!-- <input type="text" name="body" class="body-input"> -->
+				<textarea class="body-input"></textarea>
+				
+				<button class="submit-btn"> submit </button>
+				</form>
 			</div>
 
 			</div>
