Gets elements from input-form

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		</div>
 		<div class="card-section"></div>
 	</section>
+<script type="text/javascript" src="main.js"></script>
 
 </body>
 </html>
