--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 		</div>
 		<div class="card-section"></div>
 	</section>
-<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="idea.js"></script>
+	<script type="text/javascript" src="main.js"></script>
 
 </body>
 </html>
